# arma3-mod-manager-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh
src/: errors.rs  main.rs
src/mod_manager/: config.rs  file_handler.rs  mod.rs  paginator.rs  terminal.rs  utils.rs
